prepare for vagrant

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,5 +11,6 @@ nav:
 - PaaS Orchestration: 'orchent.md' 
 - Container Orchestration: 'k3s.md'
 - Setting up FaaS platform: 'openfaas.md'
-- Trigger fuctions with events: 'events.md'
+- Functions 101: 'events.md'
+- Workflows and triggers: 'workflows.md'
 repo_url: 'https://github.com/Cloud-PG/SOSC2019'
