--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ deploy: # Deploy documentation to Github in the gh_pages branch
     github_token: $token
     local_dir: site
     on:
-        branch: master
+        branch: gh_pages
